# astrouni

./: .gitignore  BUILD_SUCCESS.md  CMakeCache.txt  CMakeLists.txt  COPYRIGHT  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  PORTIERUNGSPLAN.md  QUICKSTART.md  README.md  README_EN.md  RELEASE_NOTES.md  RELEASE_NOTES_EN.md  TEXTANALYSE_FEATURE.md  build.bat  build.sh  build_linux_release.sh  build_linux_release_docker_ubuntu2004.sh  build_macos_release.sh  build_windows_release.bat  clean.bat  clean.sh  cmake_install.cmake  compile_commands.json  example_chart.cpp  hex_dump  hex_dump.cpp  run_gui.bat  run_gui.sh  test.bat  test.sh  test_core_logic  test_core_logic.cpp  test_data_layer  test_data_layer.cpp  test_struct.cpp
.windsurf/rules/: legacy-code.md
apps/cli/: CMakeLists.txt  Makefile  astrocli  cmake_install.cmake
apps/cli/src/: main.cpp
apps/gui/: CMakeLists.txt  Makefile  astro_gui  cmake_install.cmake
apps/gui/src/: AspectGrid.cpp  AspectGrid.hpp  AspectGridWindow.cpp  AspectGridWindow.hpp  ChartPanel.cpp  ChartPanel.hpp  Dialogs.cpp  Dialogs.hpp  GlyphRenderer.cpp  GlyphRenderer.hpp  LegacyGDIAdapter.hpp  LegacyPortRenderer.cpp  LegacyPortRenderer.hpp  main.cpp
astrouni2026/: CMakeLists.txt  README.md
astrouni2026/docs/: PORTIERUNGSPLAN_QT6.md
astrouni2026/src/: main.cpp
astrouni2026/src/core/: CMakeLists.txt  astro_font_provider.cpp  astro_font_provider.h  astro_text_analyzer.cpp  astro_text_analyzer.h  astro_text_store.cpp  astro_text_store.h  calculations.cpp  calculations.h  chart_calc.cpp  chart_calc.h  constants.h  data_types.cpp  data_types.h  swiss_eph.cpp  swiss_eph.h  transit_calc.cpp  transit_calc.h
astrouni2026/src/data/: CMakeLists.txt  legacy_io.cpp  legacy_io.h  orte_db.cpp  orte_db.h  person_db.cpp  person_db.h
astrouni2026/src/gui/: CMakeLists.txt  chart_widget.cpp  chart_widget.h  html_item_delegate.h  main_window.cpp  main_window.h  pdf_exporter.cpp  pdf_exporter.h  print_manager.cpp  print_manager.h  radix_window.cpp  radix_window.h  transit_result_window.cpp  transit_result_window.h
astrouni2026/src/gui/dialogs/: farben_dialog.cpp  farben_dialog.h  haus_dialog.cpp  haus_dialog.h  horo_typ_dialog.cpp  horo_typ_dialog.h  orben_dialog.cpp  orben_dialog.h  ort_dialog.cpp  ort_dialog.h  ort_duplikat_dialog.cpp  ort_duplikat_dialog.h  ort_search_dialog.cpp  ort_search_dialog.h  person_dialog.cpp  person_dialog.h  person_search_dialog.cpp  person_search_dialog.h  retrograde_dialog.cpp  retrograde_dialog.h  settings_dialog.cpp  settings_dialog.h  text_editor_dialog.cpp  text_editor_dialog.h  trans_sel_dialog.cpp  trans_sel_dialog.h  transit_abort_dialog.cpp  transit_abort_dialog.h  transit_dialog.cpp  transit_dialog.h
astrouni2026/src/tools/: CMakeLists.txt  astrotext_export.cpp
astrouni2026/swisseph/: CMakeLists.txt
astrouni2026/tests/: CMakeLists.txt  test_calculations.cpp  test_chart_calc.cpp
astrouni2026/tools/: translate_astrotext.py
build-debug/: example_chart
build-debug/gui/: astro_gui
core/: CMakeLists.txt  Makefile  cmake_install.cmake
core/include/astro/: calculations.h  colors.h  data_types.h  i18n.h  math_utils.h  orben_data.h  swiss_ephemeris.h
core/include/astro/calc/: astro_calc.h  astro_data.h
core/include/astrocore/: api.hpp  ephemeris.hpp  houses.hpp  planets.hpp
core/src/: api.cpp  calculations.cpp  colors.cpp  data_types.cpp  ephemeris.cpp  houses.cpp  i18n.cpp  math_utils.cpp  planets.cpp  swiss_ephemeris.cpp
core/src/calc/: astro_calc.cpp  astro_data.cpp
database/: CMakeLists.txt  legacy_data_manager.cpp  legacy_data_manager.h  orben_file_manager.cpp  orben_file_manager.h
docker/ubuntu20.04/: Dockerfile
docs/: PORTIERUNGSPLAN.md  STATUS.md
gui/: CMakeLists.txt  chart_panel.cpp  chart_panel.h  chart_renderer.cpp  chart_renderer.h  einst_dialog.cpp  farben_dialog.cpp  hauser_dialog.cpp  horo_typ_dialog.cpp  legacy_renderer.cpp  legacy_renderer.h  main.cpp  main_frame.cpp  main_frame.h  orben_dialog.cpp  orben_dialog.cpp.old  orben_dialog.h  orben_dialog.h.old  ort_dialog.cpp  ort_dialog.h  person_dialog.cpp  person_dialog.h  symbol_panel.cpp  symbol_panel.h
gui/database/: legacy_data_manager.cpp  legacy_data_manager.h  radix_database.cpp  radix_database.h
gui/dialogs/: abbruch_dialog.cpp  abbruch_dialog.h  berechnung_dialog.cpp  berechnung_dialog.h  datum_dialog.cpp  datum_dialog.h  einstellungen_dialog.cpp  einstellungen_dialog.h  farben_dialog.cpp  farben_dialog.h  grad_dialog.cpp  grad_dialog.h  haus_dialog.cpp  haus_dialog.h  horotyp_dialog.cpp  horotyp_dialog.h  new_chart_dialog.cpp  new_chart_dialog.h  orben_dialog.cpp  orben_dialog.h  ort_auswahl_dialog.cpp  ort_auswahl_dialog.h  ort_dialog.cpp  ort_dialog.h  ort_duplikat_dialog.cpp  ort_duplikat_dialog.h  person_dialog.cpp  person_dialog.h  person_hilfe_dialog.cpp  person_hilfe_dialog.h  ruecklaeufig_dialog.cpp  ruecklaeufig_dialog.h  transit_dialog.cpp  transit_dialog.h  transit_einstellungen_dialog.cpp  transit_einstellungen_dialog.h
legacy/: astro.h  astrofil.c  astroun1.def  astroun1.rc  astrouni.c  astrouni.def  astrouni.h  astrouni.prj  astrouni.rc  astrounr.h  aucalc.c  aucalc.h  audef.h  auhelper.c  aulistbo.c  aupla.c  aupla1.c  aupr1int.c  auprint.c  autransi.c  auwurze1.c  auwurzel.c  auwurzel.h  datenb.rc  dateng.rc  decrypt.c  extern.h  func.c  io.c  reorder.c
plan/: plan.md
swisseph/: README.md  download_ephe.sh
tests/: CMakeLists.txt  CTestTestfile.cmake  astro_tests_core  test_calculations.cpp  test_core.cpp  test_gui.cpp  test_houses.cpp  test_math_utils.cpp  test_planets.cpp  test_swiss_ephemeris.cpp
tools/: CMakeLists.txt  show_dat.cpp  test_orben_load.cpp  test_orben_save.cpp  translate_astrotext.py
wxwidgets-version-deprecated/core/: CMakeLists.txt
wxwidgets-version-deprecated/database/: CMakeLists.txt  legacy_data_manager.cpp  legacy_data_manager.h
wxwidgets-version-deprecated/docs/: BUILD.md  DATEI_ANALYSE.md  DATENFORMAT.md  FINAL_STATUS.md  INSTALLATION.md  QUICKSTART.md  SETUP_SWISSEPH.md  STATUS.md  (+1 more)
wxwidgets-version-deprecated/tests/: CMakeLists.txt  test_data_manager.cpp
(+19 files in other folders)
